--- a/docs/posts/09wk-2.out.ipynb
+++ b/docs/posts/09wk-2.out.ipynb
@@ -9,7 +9,7 @@
         "최규빈  \n",
         "2024-05-01"
       ],
-      "id": "6ad6fb9a-9226-4e6f-93bd-6fbb97d02804"
+      "id": "509fdca9-3018-4124-876e-a1afb84fcdd8"
     },
     {
       "cell_type": "code",
@@ -34,6 +34,14 @@
       "source": [
         "<a href=\"https://colab.research.google.com/github/guebin/DL2024/blob/main/posts/09wk-2.ipynb\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" style=\"text-align: left\"></a>\n",
         "\n",
+        "> **중간고사 관련 안내**\n",
+        ">\n",
+        "> -   개인노트북, 개인태블릿 등 사용가능함. (배터리 충전기 및 와이파이는\n",
+        ">     제공하지 않음)\n",
+        "> -   부정행위 (카카오톡 채팅을 통한 코드공유, 대리시험 등) 적발시 F\n",
+        ">     처리함.\n",
+        "> -   답안은 `.ipynb` 파일로 제출할 것.\n",
+        "\n",
         "# `1`. 크롤링을 통한 이미지 분석 및 CAM – 30점\n",
         "\n",
         "`(1)` 두 가지 키워드로 크롤링을 수행하여 이미지자료를 모아라. (키워드는\n",
@@ -51,7 +59,7 @@
         "아래는 `torchvision`을 활용하여 MNIST 데이터를 불러오고 `DataLoader`를\n",
         "생성하는 코드이다."
       ],
-      "id": "b5fd96cd-8a85-4a68-842d-d7d10583f860"
+      "id": "8200be69-71d6-437f-b79f-a228f3bc3935"
     },
     {
       "cell_type": "code",
@@ -95,7 +103,7 @@
         "\n",
         "`(2)` 아래의 함수를 이용하여 하나의 배치에 포함된 이미지를 출력하라."
       ],
-      "id": "85497e84-98f2-43d0-8392-14676a138c70"
+      "id": "e461fe1d-4b2c-465c-8bcf-b69ba569c0d5"
     },
     {
       "cell_type": "code",
@@ -119,7 +127,7 @@
         "**힌트**: 출력예시는 아래와 같다. 여기에서 `xi_real.shape`은\n",
         "(120,1,64,64) 이다."
       ],
-      "id": "e84f1416-8bb9-4431-bcf6-e107fa331912"
+      "id": "6bb4ef84-ed32-4654-91ec-ca6498a789b8"
     },
     {
       "cell_type": "code",
@@ -147,7 +155,7 @@
       "source": [
         "`(3)` 아래의 코드를 이용하여 `net_police`를 생성하라."
       ],
-      "id": "f2924913-17f7-481c-b56e-8924ff3e2022"
+      "id": "95cd943a-1f6f-4dac-a0e7-4d13778b8274"
     },
     {
       "cell_type": "code",
@@ -200,7 +208,7 @@
         "\n",
         "`(4)` 아래의 코드를 이용하여 `net_faker`를 생성하라."
       ],
-      "id": "2b1bcd12-4155-4d4e-8e9d-fd3123acfd20"
+      "id": "33515124-193b-49f5-b380-10bb137a4ae5"
     },
     {
       "cell_type": "code",
@@ -260,7 +268,7 @@
         "\n",
         "`(5)` 아래와 같이 두개의 `optimizr` 를 선언하라."
       ],
-      "id": "600845a2-3704-4eac-a4c0-31945a9ffc78"
+      "id": "15bc7de7-dd0d-4053-93b0-04d4912d1c4b"
     },
     {
       "cell_type": "code",
@@ -307,7 +315,7 @@
         "\n",
         "**hint** 시각화 예시는 아래와 같다."
       ],
-      "id": "90da6a70-af92-4408-b6c0-07538c22f246"
+      "id": "9535effe-bd37-475c-8155-e48103fe9d16"
     },
     {
       "cell_type": "code",
