--- a/docs/posts/09wk-2.out.ipynb
+++ b/docs/posts/09wk-2.out.ipynb
@@ -9,7 +9,7 @@
         "최규빈  \n",
         "2024-05-01"
       ],
-      "id": "509fdca9-3018-4124-876e-a1afb84fcdd8"
+      "id": "fa006f75-31bc-4e5c-896f-103672649809"
     },
     {
       "cell_type": "code",
@@ -59,7 +59,7 @@
         "아래는 `torchvision`을 활용하여 MNIST 데이터를 불러오고 `DataLoader`를\n",
         "생성하는 코드이다."
       ],
-      "id": "8200be69-71d6-437f-b79f-a228f3bc3935"
+      "id": "ce44edbd-09ab-48a2-bc8e-d9bf62e968f3"
     },
     {
       "cell_type": "code",
@@ -103,7 +103,7 @@
         "\n",
         "`(2)` 아래의 함수를 이용하여 하나의 배치에 포함된 이미지를 출력하라."
       ],
-      "id": "e461fe1d-4b2c-465c-8bcf-b69ba569c0d5"
+      "id": "1c544b38-db85-4bc4-8dbd-34a9f3aa9d13"
     },
     {
       "cell_type": "code",
@@ -127,7 +127,7 @@
         "**힌트**: 출력예시는 아래와 같다. 여기에서 `xi_real.shape`은\n",
         "(120,1,64,64) 이다."
       ],
-      "id": "6bb4ef84-ed32-4654-91ec-ca6498a789b8"
+      "id": "8f84fe01-1c29-493e-b4f5-18e71c0734e4"
     },
     {
       "cell_type": "code",
@@ -155,7 +155,7 @@
       "source": [
         "`(3)` 아래의 코드를 이용하여 `net_police`를 생성하라."
       ],
-      "id": "95cd943a-1f6f-4dac-a0e7-4d13778b8274"
+      "id": "9ceb0624-54ba-43c2-8f9d-fd3da3cba556"
     },
     {
       "cell_type": "code",
@@ -208,7 +208,7 @@
         "\n",
         "`(4)` 아래의 코드를 이용하여 `net_faker`를 생성하라."
       ],
-      "id": "33515124-193b-49f5-b380-10bb137a4ae5"
+      "id": "65ed50ab-ffa4-4f20-835e-3b2e72076c85"
     },
     {
       "cell_type": "code",
@@ -268,7 +268,7 @@
         "\n",
         "`(5)` 아래와 같이 두개의 `optimizr` 를 선언하라."
       ],
-      "id": "15bc7de7-dd0d-4053-93b0-04d4912d1c4b"
+      "id": "053ec1d2-be12-4e93-8059-d0290396cdbc"
     },
     {
       "cell_type": "code",
@@ -289,7 +289,7 @@
       "source": [
         "아래의 세부지침에 맞추어 `net_police` 와 `net_faker`를 학습하라.\n",
         "\n",
-        "1.  5 Epoch을 진행하여 학습할 것\n",
+        "1.  5 epochs 을 진행하여 학습할 것\n",
         "2.  GPU를 이용하여 학습할 것\n",
         "\n",
         "(풀이)\n",
@@ -315,7 +315,7 @@
         "\n",
         "**hint** 시각화 예시는 아래와 같다."
       ],
-      "id": "9535effe-bd37-475c-8155-e48103fe9d16"
+      "id": "333f181f-b38c-44ef-9710-c5c1b2ed952f"
     },
     {
       "cell_type": "code",
