--- a/docs/posts/03wk-2.out.ipynb
+++ b/docs/posts/03wk-2.out.ipynb
@@ -17,7 +17,7 @@
         "\n",
         "# 2. Imports"
       ],
-      "id": "1049a921-59d8-4ef6-b97b-b0f9bbeabbe8"
+      "id": "051694d5-5b05-433a-ab54-023cc51eb0de"
     },
     {
       "cell_type": "code",
@@ -44,7 +44,7 @@
         "\n",
         "`-` 아래와 같은 벡터 ${\\boldsymbol x}$를 가정하자."
       ],
-      "id": "6b0eb12b-12dc-4c42-8e4d-4c2ef9bd635f"
+      "id": "32689237-3804-4650-b0e4-41ea74a12ee2"
     },
     {
       "cell_type": "code",
@@ -69,7 +69,7 @@
         "\n",
         "## A. 방법1"
       ],
-      "id": "8078642d-7f98-440d-b2bc-737821d5b215"
+      "id": "4dd22c4f-2b33-4308-a9a9-5fce2a7f0c31"
     },
     {
       "cell_type": "code",
@@ -140,7 +140,7 @@
         "\n",
         "## B. 방법2 – 렐루이용"
       ],
-      "id": "c4103620-3fca-4888-ac3d-5d797fadb3db"
+      "id": "52e54c9b-7b1d-44bd-b0bc-db557318d1c9"
     },
     {
       "cell_type": "code",
@@ -227,7 +227,7 @@
       "source": [
         "`-` 우리의 목표: 저 초록선에서 시그모이드를 태우면된다. 즉 아래의 느낌임"
       ],
-      "id": "363bdae0-3cfd-45b5-b2dc-a3a205968b0c"
+      "id": "bf1d7103-682f-4503-822f-8989bdacde0b"
     },
     {
       "cell_type": "code",
@@ -291,7 +291,7 @@
         "\n",
         "`-` 1단계"
       ],
-      "id": "d12d3ce7-0d7d-42fb-a7c3-b7c7fc93b7bf"
+      "id": "25ab5abc-1bf8-4e02-9311-ea6d80d7d429"
     },
     {
       "cell_type": "code",
@@ -311,7 +311,7 @@
       "source": [
         "`-` 2단계"
       ],
-      "id": "f8ead60d-2e96-4d4b-aa80-d84cb7f7124f"
+      "id": "c870be63-f6f6-4a11-b776-d96933c76107"
     },
     {
       "cell_type": "code",
@@ -332,7 +332,7 @@
       "source": [
         "`-` 3단계"
       ],
-      "id": "7364aee2-07d6-47b3-b3e0-063952283fef"
+      "id": "1611841e-3872-4aca-8c58-09c0090eaacd"
     },
     {
       "cell_type": "code",
@@ -353,7 +353,7 @@
       "source": [
         "`-` 4단계"
       ],
-      "id": "f30815b0-3bf8-4ba3-85f4-dee9e367cb79"
+      "id": "2860e708-dc65-493d-b194-ca081c0a99bb"
     },
     {
       "cell_type": "code",
@@ -385,22 +385,11 @@
       "source": [
         "`-` 그런데, 4단계는 아래와 같이 볼 수 있다.\n",
         "\n",
-        "-   ${\\boldsymbol v}\\begin{bmatrix} -4.5 \\\\ -9.0 \\end{bmatrix} + 4.5 = \\begin{bmatrix}\n",
-        "    v_{11} & v_{12}  \\\\\n",
-        "    v_{21} & v_{22}  \\\\\n",
-        "    \\dots & \\dots  \\\\\n",
-        "    v_{n1} & v_{n2}  \\\\\n",
-        "    \\end{bmatrix}\\begin{bmatrix} -4.5 \\\\ -9.0 \\end{bmatrix} + 4.5 =\n",
-        "    \\begin{bmatrix}\n",
-        "    -4.5 v_{11} - 9.0 v_{12} + 4.5  \\\\\n",
-        "    -4.5 v_{21} - 9.0 v_{22} + 4.5  \\\\\n",
-        "    \\dots \\\\\n",
-        "    -4.5 v_{n1} - 9.0 v_{n2} + 4.5 \\\\\n",
-        "    \\end{bmatrix}$\n",
+        "-   ${\\boldsymbol v}\\begin{bmatrix} -4.5 \\\\ -9.0 \\end{bmatrix} + 4.5 = \\begin{bmatrix} v_{11} & v_{12} \\\\ v_{21} & v_{22} \\\\ \\dots & \\dots \\\\ v_{n1} & v_{n2} \\\\ \\end{bmatrix}\\begin{bmatrix} -4.5 \\\\ -9.0 \\end{bmatrix} + 4.5 = \\begin{bmatrix} -4.5 v_{11} - 9.0 v_{12} + 4.5 \\\\ -4.5 v_{21} - 9.0 v_{22} + 4.5 \\\\ \\dots \\\\ -4.5 v_{n1} - 9.0 v_{n2} + 4.5 \\\\ \\end{bmatrix}$\n",
         "\n",
         "위의 수식을 참고하여 매트릭스의 곱 형태로 다시 포현하면 아래와 같다."
       ],
-      "id": "1ae75c92-d79d-4a0b-b3c2-5cd85ab1ab10"
+      "id": "c677ed7e-2967-47a5-ab4b-565e5cf3312f"
     },
     {
       "cell_type": "code",
@@ -423,7 +412,7 @@
         "이제 매트릭스의 곱 대신에 `torch.nn.Linear()`를 이용하면 아래의 코드와\n",
         "같아진다."
       ],
-      "id": "e9599c69-1c58-43e6-abe8-a01f44dc5ff5"
+      "id": "0a7d21b0-4297-4509-ae8e-c16c2a74dc41"
     },
     {
       "cell_type": "code",
@@ -478,7 +467,7 @@
         "x_n \n",
         "\\end{bmatrix}\\begin{bmatrix} 1 & -1 \\end{bmatrix} = \\begin{bmatrix} x_1 & -x_1 \\\\ x_2 & -x_2 \\\\ \\dots & \\dots \\\\ x_n & -x_n \\end{bmatrix}$$"
       ],
-      "id": "19cf00ba-9ec6-45b7-a4ce-bad95e563171"
+      "id": "d177f36f-d49f-4312-8413-f90c2179e627"
     },
     {
       "cell_type": "code",
@@ -525,7 +514,7 @@
         "`-` 따라서 `torch.nn` 에 포함된 레이어를 이용하면 아래와 같이 표현할 할\n",
         "수 있다."
       ],
-      "id": "37923744-9ce4-4d4d-ae5b-ea80c06d1f52"
+      "id": "4a1142d8-e854-4d94-a406-954149082e0d"
     },
     {
       "cell_type": "code",
@@ -564,7 +553,7 @@
         "`-` 각각의 layer를 `torch.nn.Sequential()` 로 묶으면 아래와 같이 정리할\n",
         "수 있다."
       ],
-      "id": "25d9fc49-84c5-4919-b980-46df26a8ba83"
+      "id": "cb7998f1-0254-46b8-b3ae-58fc8fb74882"
     },
     {
       "cell_type": "code",
@@ -633,7 +622,7 @@
         "\n",
         "## A. 데이터"
       ],
-      "id": "fedc6ef9-8ebb-421d-a35f-e95189305ae3"
+      "id": "14a20193-e1be-4bd2-8d43-b984e0d6d9fb"
     },
     {
       "cell_type": "code",
@@ -698,7 +687,7 @@
         "\n",
         "`-` Step2,3,4 는 너무 뻔해서.."
       ],
-      "id": "89f30733-6884-49dd-b33a-00c923c14769"
+      "id": "24b91b37-c16e-4f54-9a5d-0ea617fa8a9f"
     },
     {
       "cell_type": "code",
