--- a/docs/posts/08wk-1,2.out.ipynb
+++ b/docs/posts/08wk-1,2.out.ipynb
@@ -17,7 +17,7 @@
         "\n",
         "# 2. Imports"
       ],
-      "id": "8d42aefb-91e0-419f-86f4-4e0131f72876"
+      "id": "fd80a3b6-2ada-4d7e-9304-8a2dc93cd75c"
     },
     {
       "cell_type": "code",
@@ -38,13 +38,17 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "# 3. GAN intro\n",
+        "# 3. GAN (Goodfellow et al. 2014) intro\n",
         "\n",
-        "`-` 저자: 이안굿펠로우 - 천재임 - 지도교수가 요수아 벤지오\n",
+        "`-` 저자: 이안굿펠로우\n",
         "\n",
-        "`-` 논문 NIPS, 저는 이 논문 읽고 소름돋았어요.. -\n",
-        "https://arxiv.org/abs/1406.2661 (2021-09, 38751회 인용.. $\\to$ 2022-09,\n",
-        "48978회 인용.. $\\to$ 2024-03, 66609 인용..)\n",
+        "-   천재임\n",
+        "-   지도교수가 요수아 벤지오\n",
+        "\n",
+        "`-` 저는 아래의 논문 읽고 소름돋았어요..\n",
+        "\n",
+        "-   https://arxiv.org/abs/1406.2661 (2021-09, 38751회 인용.. $\\to$\n",
+        "    2022-09, 48978회 인용.. $\\to$ 2024-03, 66609 인용..)\n",
         "\n",
         "`-` 최근 10년간 머신러닝 분야에서 가장 혁신적인 아이디어이다. (얀르쿤,\n",
         "2014년 시점..)\n",
@@ -144,7 +148,7 @@
         "\n",
         "## A. Data"
       ],
-      "id": "d7296d8f-e1a2-4186-b840-05fa2d6db423"
+      "id": "0784ce93-2ef5-48f3-a933-b4160a148416"
     },
     {
       "cell_type": "code",
@@ -204,7 +208,7 @@
         "\n",
         "`-` 네트워크의 출력: (n,1,28,28)의 텐서"
       ],
-      "id": "afa414ed-f842-40fa-b921-0326890b650a"
+      "id": "e2a0a6b2-ee09-4c16-8010-5fd80146d143"
     },
     {
       "cell_type": "code",
@@ -279,7 +283,7 @@
         "\n",
         "`-` 네트워크의 출력: 0,1"
       ],
-      "id": "8d582f3e-f86a-47de-a5ed-3f29590350fd"
+      "id": "c6982b45-f0e0-4fef-baee-0bb6684adcd2"
     },
     {
       "cell_type": "code",
@@ -314,7 +318,7 @@
         "\n",
         "`-` 진짜이미지"
       ],
-      "id": "c513828d-2fec-46c5-b3ed-2b8e59afdc0f"
+      "id": "aec2d3d6-21bd-4855-8d77-fb7386d5718c"
     },
     {
       "cell_type": "code",
@@ -343,7 +347,7 @@
         "`-` 진짜 이미지를 경찰한테 한장 줘볼까? $\\to$ yhat이 나올텐데, 이 값이\n",
         "0이어야 함"
       ],
-      "id": "9ee167c7-e7d4-4f49-853c-0e090542435b"
+      "id": "a2b6f376-1d73-4c63-8138-ef9e43b209cb"
     },
     {
       "cell_type": "code",
@@ -370,7 +374,7 @@
         "`-` 가짜이미지 – 데이터셋이 있는게 아니고 net_faker가 생성해야하는\n",
         "데이터"
       ],
-      "id": "d2beb1be-3475-4f95-9ca2-91f9c0b5e567"
+      "id": "8a10e90f-dec9-42bc-ac4d-7f237c702062"
     },
     {
       "cell_type": "code",
@@ -426,7 +430,7 @@
         "`-` 가짜 이미지를 경찰한테 한장 줘볼까? $\\to$ yhat이 나올텐데, 이 값이\n",
         "1이어야 함"
       ],
-      "id": "ca503607-720b-40d7-b7c2-7ae8c9827e6c"
+      "id": "25108ebe-85d0-4f6b-b7a8-398fdc41bcfa"
     },
     {
       "cell_type": "code",
@@ -451,7 +455,7 @@
         "`-` 페이커의 무능함 (왼쪽 이미지를 가짜이미라고 만들어 놓았음) + 경찰의\n",
         "무능함 (왼쪽과 오른쪽을 보고 뭐가 진짜인지도 모름)"
       ],
-      "id": "470106e9-c8e8-4185-bb53-e9e713d5f01a"
+      "id": "68225e20-4084-493f-8e80-91c336582885"
     },
     {
       "cell_type": "code",
@@ -481,7 +485,7 @@
       "source": [
         "## E. 똑똑해진 경찰"
       ],
-      "id": "4e0a1f6e-6fc2-43ae-8c61-b3df8a12b2b8"
+      "id": "d743bc77-81e5-488f-9c0c-547dc6860255"
     },
     {
       "cell_type": "code",
@@ -508,7 +512,7 @@
         "    차원은 (6131,1,28,28).\n",
         "-   진짜자료는 0, 가짜자료는 1으로 라벨링."
       ],
-      "id": "42184c35-1ec1-4ec5-bb64-0261c64b9961"
+      "id": "b04bd317-7cba-480c-8920-34b8caf2990b"
     },
     {
       "cell_type": "code",
@@ -531,7 +535,7 @@
       "source": [
         "`-` step1: X_real, X_fake를 보고 각가 yhat_real, yhat_fake를 만드는 과정"
       ],
-      "id": "bae91fe8-4fc7-4e20-bc65-56a0c8691dc6"
+      "id": "1d01cc93-7738-44e2-b95b-063618b4eecc"
     },
     {
       "cell_type": "code",
@@ -554,7 +558,7 @@
         "(yhat_fake $\\approx$ y_fake) (2) 진짜이미지를 진짜라고 해야한다.\n",
         "(yhat_real $\\approx$ y_real)"
       ],
-      "id": "3b0b00a9-f741-49c9-8389-49782b7c7368"
+      "id": "3929c0ed-46e3-41cb-a93c-a1021c144416"
     },
     {
       "cell_type": "code",
@@ -576,7 +580,7 @@
       "source": [
         "`-` step3~4는 별로 특별한게 없음. 그래서 바로 epoch을 진행시켜보자."
       ],
-      "id": "f36f1f2b-971e-4708-b5eb-e67433de1d66"
+      "id": "0283a73d-8588-4953-bf76-344e72076be6"
     },
     {
       "cell_type": "code",
@@ -619,7 +623,7 @@
       "source": [
         "`-` 훈련된 경찰의 성능을 살펴보자."
       ],
-      "id": "77276eee-5253-49a1-ba71-3705eebc5b98"
+      "id": "91375a81-13a7-4381-b34c-9209215fe05c"
     },
     {
       "cell_type": "code",
@@ -651,7 +655,7 @@
       "source": [
         "`-` 꽤 우수한 경찰이 되었음"
       ],
-      "id": "4bd8e207-ce72-43f3-b5ba-e1958e60dc77"
+      "id": "6cea0025-3931-4355-995b-357620a07ad6"
     },
     {
       "cell_type": "code",
@@ -683,7 +687,7 @@
         "\n",
         "`-` step1: Noise $\\to$ X_fake"
       ],
-      "id": "148454f6-a6d8-4876-8d57-21c8017cf113"
+      "id": "7b538c09-f0cb-49d5-81bf-7d5c25790302"
     },
     {
       "cell_type": "code",
@@ -706,7 +710,7 @@
         "진짜라고 판단하는 것. 즉 `yhat_fake` $\\approx$ `y_real` 이어야 페이커의\n",
         "실력이 우수하다고 볼 수 있음."
       ],
-      "id": "e852baca-43ba-45e9-ad9f-d7156904e03e"
+      "id": "877b6952-89ea-48fb-a7e3-25adf09180d2"
     },
     {
       "cell_type": "code",
@@ -727,7 +731,7 @@
       "source": [
         "`-` step3~4는 별로 특별한게 없음. 그래서 바로 epoch을 진행시켜보자."
       ],
-      "id": "21a3d55d-183c-42ae-be2a-e16d46bb1e06"
+      "id": "817ee370-cf99-473d-b788-cbcb52d3c073"
     },
     {
       "cell_type": "code",
@@ -781,7 +785,7 @@
       "source": [
         "`-` 위조범의 실력향상을 감상해보자."
       ],
-      "id": "1e483276-d086-4bce-9ebe-08d8328a1965"
+      "id": "37cbb345-4f9a-45d8-8ef5-af01288e7088"
     },
     {
       "cell_type": "code",
@@ -830,7 +834,7 @@
         "\n",
         "> 두 적대적인 네트워크를 경쟁시키자!"
       ],
-      "id": "e54499ad-419c-4a83-8bd1-d3c677590f4e"
+      "id": "bce23559-1ae4-4bd8-9d6c-cf416514324d"
     },
     {
       "cell_type": "code",
@@ -935,9 +939,14 @@
         "\n",
         "`-` 두 네트워크의 균형이 매우 중요함 – 균형이 깨지는 순간 학습은 실패함\n",
         "\n",
-        "`-` 생성되는 이미지의 다양성이 부족한 경우가 발생함. (mode collapse)"
+        "`-` 생성되는 이미지의 다양성이 부족한 경우가 발생함. (mode collapse)\n",
+        "\n",
+        "Goodfellow, Ian, Jean Pouget-Abadie, Mehdi Mirza, Bing Xu, David\n",
+        "Warde-Farley, Sherjil Ozair, Aaron Courville, and Yoshua Bengio. 2014.\n",
+        "“Generative Adversarial Nets.” *Advances in Neural Information\n",
+        "Processing Systems* 27."
       ],
-      "id": "a6058190-7d32-4d42-baf5-fce3804f3abe"
+      "id": "7be1884e-6c57-4465-8c90-fc6a931870ee"
     }
   ],
   "nbformat": 4,
