--- a/docs/posts/09wk-2.out.ipynb
+++ b/docs/posts/09wk-2.out.ipynb
@@ -9,7 +9,7 @@
         "최규빈  \n",
         "2024-05-01"
       ],
-      "id": "bf1262d4-fb3a-4f57-88d2-f34dfe00290e"
+      "id": "204e0cc8-080f-4f7c-858e-804e64eea15d"
     },
     {
       "cell_type": "code",
@@ -49,7 +49,7 @@
         "아래는 `torchvision`을 활용하여 MNIST 데이터를 불러오고 `DataLoader`를\n",
         "생성하는 코드이다."
       ],
-      "id": "e196fc77-0540-4643-9da6-111eb9ebf1f4"
+      "id": "109d403a-6045-41b6-974e-89368412796b"
     },
     {
       "cell_type": "code",
@@ -88,7 +88,7 @@
         "\n",
         "(풀이)"
       ],
-      "id": "30398d50-c694-4160-8faa-472899183432"
+      "id": "979681d5-1010-4822-9183-218f3647e82a"
     },
     {
       "cell_type": "code",
@@ -120,7 +120,7 @@
       "source": [
         "`(2)` 아래의 함수를 이용하여 하나의 배치에 포함된 이미지를 출력하라."
       ],
-      "id": "c312c79c-57c2-4375-9d14-fa6a7bb160c2"
+      "id": "2ca79bf3-9bcc-4e66-bdda-8913851f169e"
     },
     {
       "cell_type": "code",
@@ -141,7 +141,7 @@
       "source": [
         "(풀이)"
       ],
-      "id": "7360250c-c2cb-46ae-81da-466b48045b8d"
+      "id": "fb064739-b43d-4f15-ad04-dbd37b0e991a"
     },
     {
       "cell_type": "code",
@@ -181,7 +181,7 @@
       "source": [
         "`(3)` 아래의 코드를 이용하여 `net_police`를 생성하라."
       ],
-      "id": "23b15b10-dee1-4577-96bf-c5df7279023f"
+      "id": "5b9c2891-0a6e-4838-a52f-83dd13910c0d"
     },
     {
       "cell_type": "code",
@@ -223,7 +223,7 @@
         "\n",
         "(풀이)"
       ],
-      "id": "fdca4ccd-bcac-46f8-a103-7dee663c96b3"
+      "id": "768cd858-2562-4c56-8819-505570814c86"
     },
     {
       "cell_type": "code",
@@ -273,7 +273,7 @@
       "source": [
         "`(4)` 아래의 코드를 이용하여 `net_faker`를 생성하라."
       ],
-      "id": "58852fa4-e6d5-44ff-8cdc-d8006f183d07"
+      "id": "025dd502-d3e2-4790-a324-46889dee7567"
     },
     {
       "cell_type": "code",
@@ -319,7 +319,7 @@
         "\n",
         "(풀이)"
       ],
-      "id": "3cda27e9-9b49-46bb-8008-1d307597247c"
+      "id": "69239e35-605f-45f4-afdd-e59030348071"
     },
     {
       "cell_type": "code",
@@ -369,7 +369,7 @@
       "source": [
         "`(5)` 아래와 같이 두개의 `optimizr` 를 선언하라."
       ],
-      "id": "e77c9875-10f3-4dcb-8ec4-a9ea30e67659"
+      "id": "3130ddaa-1174-4805-8447-722969fb8995"
     },
     {
       "cell_type": "code",
@@ -393,12 +393,9 @@
         "1.  5 Epoch을 진행하여 학습할 것\n",
         "2.  GPU를 이용하여 학습할 것\n",
         "\n",
-        "(풀이)\n",
-        "\n",
-        "**hint** 아래와 같은 얼개로 사용하면된다. ?? 와 .. 에 해당하는 부분은\n",
-        "적당히 채울것"
+        "(풀이)"
       ],
-      "id": "3849360e-2433-4760-9aa4-40bd4665bdca"
+      "id": "344c36f9-e768-4fec-8dde-cd49e7be2c98"
     },
     {
       "cell_type": "code",
@@ -469,11 +466,9 @@
       "source": [
         "`(6)` 학습결과를 (2)의 imshow 함수를 이용하여 시각화하라.\n",
         "\n",
-        "(풀이)\n",
-        "\n",
-        "**hint** 시각화 예시는 아래와 같다."
+        "(풀이)"
       ],
-      "id": "4a169e43-04f0-4330-b269-e8813299c8f8"
+      "id": "876814c3-280b-4e12-a9a8-ccc121b591b2"
     },
     {
       "cell_type": "code",
@@ -503,7 +498,7 @@
         "\n",
         "주어진 자료가 아래와 같다고 하자."
       ],
-      "id": "ed3da308-54ab-466b-809b-298ca05dcecd"
+      "id": "d5cb744a-8498-48d3-a1b4-6cfc4fa698a5"
     },
     {
       "cell_type": "code",
@@ -552,7 +547,7 @@
         "\n",
         "(풀이)"
       ],
-      "id": "d7704d4a-9d19-4ce2-9e94-3ba85a7a4ff3"
+      "id": "042b4110-f75e-4f30-8073-4b10934c52d7"
     },
     {
       "cell_type": "code",
@@ -591,7 +586,7 @@
         "\n",
         "(풀이)"
       ],
-      "id": "db7acf6f-4914-466a-9688-3947d41bb4ca"
+      "id": "c8fb7b77-1a3c-40bc-92f8-51ca05201be8"
     },
     {
       "cell_type": "code",
@@ -617,7 +612,7 @@
         "\n",
         "(풀이)"
       ],
-      "id": "ca60fff1-2631-45ac-89f9-1b844f7831b0"
+      "id": "8cfa72fe-8fe0-461a-be8e-f2e992c4b81d"
     },
     {
       "cell_type": "code",
@@ -644,7 +639,7 @@
         "\n",
         "(풀이)"
       ],
-      "id": "b7f89179-0638-48d8-b318-fcdc81c7b7de"
+      "id": "1abce743-b7db-42a6-b9d6-7ee5af0bb780"
     },
     {
       "cell_type": "code",
@@ -677,7 +672,7 @@
         "\n",
         "(풀이)"
       ],
-      "id": "0defcb57-7ad5-4437-b523-bd39fae10e8d"
+      "id": "cfb9dca9-3ae9-43ad-8f31-24d910557592"
     },
     {
       "cell_type": "code",
@@ -758,7 +753,7 @@
       "source": [
         "(또 다른 풀이)"
       ],
-      "id": "d4444dbd-9d7f-4bec-9e76-4348f4cb444f"
+      "id": "99d92db7-32f8-442e-b2bb-5475defff170"
     },
     {
       "cell_type": "code",
@@ -842,11 +837,11 @@
         "\n",
         "(풀이)"
       ],
-      "id": "2bd044e8-3838-46db-bcd5-c1ae207d7792"
+      "id": "4d4b0409-48cd-40d9-bfee-5e5ef49fff3f"
     },
     {
       "cell_type": "code",
-      "execution_count": 216,
+      "execution_count": 4,
       "metadata": {
         "tags": []
       },
@@ -859,7 +854,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 217,
+      "execution_count": 5,
       "metadata": {
         "tags": []
       },
@@ -882,7 +877,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 224,
+      "execution_count": 6,
       "metadata": {
         "tags": []
       },
@@ -891,21 +886,21 @@
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "0: torch.Size([1, 1, 28, 28]) -- Conv2d(1, 6, kernel_size=(5, 5), stride=(1, 1))\n",
-            "1: torch.Size([1, 6, 24, 24]) -- MaxPool2d(kernel_size=2, stride=2, padding=0, dilation=1, ceil_mode=False)\n",
-            "2: torch.Size([1, 6, 12, 12]) -- Conv2d(6, 16, kernel_size=(5, 5), stride=(1, 1))\n",
-            "3: torch.Size([1, 16, 8, 8]) -- MaxPool2d(kernel_size=2, stride=2, padding=0, dilation=1, ceil_mode=False)\n",
-            "4: torch.Size([1, 16, 4, 4]) -- Flatten(start_dim=1, end_dim=-1)\n",
-            "5: torch.Size([1, 256]) -- Linear(in_features=256, out_features=120, bias=True)\n",
-            "6: torch.Size([1, 120]) -- ReLU()\n",
-            "7: torch.Size([1, 120]) -- Linear(in_features=120, out_features=10, bias=True)\n",
-            "8: torch.Size([1, 10]) -- Dropout(p=0.5, inplace=False)"
+            "0: torch.Size([1, 1, 28, 28]) --> Conv2d(1, 6, kernel_size=(5, 5), stride=(1, 1))\n",
+            "1: torch.Size([1, 6, 24, 24]) --> MaxPool2d(kernel_size=2, stride=2, padding=0, dilation=1, ceil_mode=False)\n",
+            "2: torch.Size([1, 6, 12, 12]) --> Conv2d(6, 16, kernel_size=(5, 5), stride=(1, 1))\n",
+            "3: torch.Size([1, 16, 8, 8]) --> MaxPool2d(kernel_size=2, stride=2, padding=0, dilation=1, ceil_mode=False)\n",
+            "4: torch.Size([1, 16, 4, 4]) --> Flatten(start_dim=1, end_dim=-1)\n",
+            "5: torch.Size([1, 256]) --> Linear(in_features=256, out_features=120, bias=True)\n",
+            "6: torch.Size([1, 120]) --> ReLU()\n",
+            "7: torch.Size([1, 120]) --> Linear(in_features=120, out_features=10, bias=True)\n",
+            "8: torch.Size([1, 10]) --> Dropout(p=0.5, inplace=False)"
           ]
         }
       ],
       "source": [
         "for i,l in enumerate(net):\n",
-        "    print(f\"{i}: {net[:i](x).shape} -- {str(l)}\")"
+        "    print(f\"{i}: {net[:i](x).shape} --> {str(l)}\")"
       ],
       "id": "9e3d69ce-3923-4283-97c8-92edb4d32294"
     },
@@ -917,7 +912,7 @@
         "\n",
         "아래를 이용하여 데이터를 불러오라."
       ],
-      "id": "9a1aec1e-f48e-4cad-a615-a0847d8621f8"
+      "id": "d8a18c28-6d75-4691-8b90-ae08fef0fc61"
     },
     {
       "cell_type": "code",
@@ -971,7 +966,7 @@
         "\n",
         "(풀이)"
       ],
-      "id": "2d239f72-e7a3-40ab-8538-abbd83f77219"
+      "id": "a8251651-2669-4b8e-a65d-1af36d6575b6"
     },
     {
       "cell_type": "code",
@@ -1001,7 +996,7 @@
         "\n",
         "(풀이)"
       ],
-      "id": "57879e32-49bd-4aa5-801d-4fde74c3a3c3"
+      "id": "a39bd459-87bb-4df6-86ed-19888b5503cb"
     },
     {
       "cell_type": "code",
